framec/tests/snapshots/csharp_snapshots__lifecycle_args.snap
---
source: framec/tests/csharp_snapshots.rs
expression: "compile_fixture(\"13_lifecycle_args\", \"csharp\")"
---
using System;
using System.Collections.Generic;
using System.Threading.Tasks;

class LifecycleArgsFrameEvent {
    public string _message;
    public List<object> _parameters;

    public LifecycleArgsFrameEvent(string message) {
        this._message = message;
        this._parameters = new List<object>();
    }

    public LifecycleArgsFrameEvent(string message, List<object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class LifecycleArgsFrameContext {
    public LifecycleArgsFrameEvent _event;
    public object? _return;
    public Dictionary<string, object> _data;
    public bool _transitioned = false;

    public LifecycleArgsFrameContext(LifecycleArgsFrameEvent ev, object? defaultReturn = null) {
        this._event = ev;
        this._return = defaultReturn;
        this._data = new Dictionary<string, object>();
        this._transitioned = false;
    }
}

class LifecycleArgsCompartment {
    public string state;
    public List<object> state_args;
    public Dictionary<string, object> state_vars;
    public List<object> enter_args;
    public List<object> exit_args;
    public LifecycleArgsFrameEvent? forward_event;
    public LifecycleArgsCompartment? parent_compartment;

    public LifecycleArgsCompartment(string state) {
        this.state = state;
        this.state_args = new List<object>();
        this.state_vars = new Dictionary<string, object>();
        this.enter_args = new List<object>();
        this.exit_args = new List<object>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    public LifecycleArgsCompartment Copy() {
        LifecycleArgsCompartment c = new LifecycleArgsCompartment(this.state);
        c.state_args = new List<object>(this.state_args);
        c.state_vars = new Dictionary<string, object>(this.state_vars);
        c.enter_args = new List<object>(this.enter_args);
        c.exit_args = new List<object>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class LifecycleArgs {
    private List<LifecycleArgsCompartment> _state_stack;
    private LifecycleArgsCompartment __compartment;
    private LifecycleArgsCompartment? __next_compartment;
    private List<LifecycleArgsFrameContext> _context_stack;
    public int sum = 0;
    public string label = "";

    public LifecycleArgs() {
        _state_stack = new List<LifecycleArgsCompartment>();
        _context_stack = new List<LifecycleArgsFrameContext>();
        this.__compartment = __prepareEnter("Idle", new List<object>(), new List<object>());
        this.__next_compartment = null;
    }

    public void __frame_init() {
        LifecycleArgsFrameEvent __e = new LifecycleArgsFrameEvent("$>", __compartment.enter_args);
        LifecycleArgsFrameContext __ctx = new LifecycleArgsFrameContext(__e, null);
        _context_stack.Add(__ctx);
        __kernel(__e);
        _context_stack.RemoveAt(_context_stack.Count - 1);
    }

    public static LifecycleArgs __create() {
        LifecycleArgs c = new LifecycleArgs();
        c.__frame_init();
        return c;
    }

    private Dictionary<string, List<string>> hsm_chain() {
        return new Dictionary<string, List<string>> {
            { "Idle", new List<string> { "Idle" } },
            { "Active", new List<string> { "Active" } },
        };
    }
    private LifecycleArgsCompartment __prepareEnter(string leaf, List<object> state_args, List<object> enter_args) {
        LifecycleArgsCompartment? comp = null;
        foreach (string name in hsm_chain()[leaf]) {
            LifecycleArgsCompartment new_comp = new LifecycleArgsCompartment(name);
            new_comp.state_args = new List<object>(state_args);
            new_comp.enter_args = new List<object>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    private void __prepareExit(List<object> exit_args) {
        LifecycleArgsCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = new List<object>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(LifecycleArgsFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            LifecycleArgsCompartment next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            LifecycleArgsFrameEvent exit_event = new LifecycleArgsFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            LifecycleArgsFrameEvent? forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                LifecycleArgsFrameEvent enter_event = new LifecycleArgsFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                LifecycleArgsFrameEvent enter_event = new LifecycleArgsFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            foreach (var ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(LifecycleArgsFrameEvent __e) {
        if (__compartment.state == "Idle") {
            _state_Idle(__e, __compartment);
        } else if (__compartment.state == "Active") {
            _state_Active(__e, __compartment);
        }
    }

    private void __transition(LifecycleArgsCompartment next) {
        __next_compartment = next;
    }

    public void load(int n, string label) {
        LifecycleArgsFrameEvent __e = new LifecycleArgsFrameEvent("load", new List<object> { n, label });
        LifecycleArgsFrameContext __ctx = new LifecycleArgsFrameContext(__e, null);
        _context_stack.Add(__ctx);
        try {
            __kernel(_context_stack[_context_stack.Count - 1]._event);
            _context_stack.RemoveAt(_context_stack.Count - 1);
        } catch {
            _context_stack.RemoveAt(_context_stack.Count - 1);
            throw;
        }
    }

    public int total() {
        LifecycleArgsFrameEvent __e = new LifecycleArgsFrameEvent("total", new List<object>());
        LifecycleArgsFrameContext __ctx = new LifecycleArgsFrameContext(__e, null);
        _context_stack.Add(__ctx);
        try {
            __kernel(_context_stack[_context_stack.Count - 1]._event);
            var __result = (int) _context_stack[_context_stack.Count - 1]._return;
            _context_stack.RemoveAt(_context_stack.Count - 1);
            return __result;
        } catch {
            _context_stack.RemoveAt(_context_stack.Count - 1);
            throw;
        }
    }

    public string tag() {
        LifecycleArgsFrameEvent __e = new LifecycleArgsFrameEvent("tag", new List<object>());
        LifecycleArgsFrameContext __ctx = new LifecycleArgsFrameContext(__e, null);
        _context_stack.Add(__ctx);
        try {
            __kernel(_context_stack[_context_stack.Count - 1]._event);
            var __result = (string) _context_stack[_context_stack.Count - 1]._return;
            _context_stack.RemoveAt(_context_stack.Count - 1);
            return __result;
        } catch {
            _context_stack.RemoveAt(_context_stack.Count - 1);
            throw;
        }
    }

    private void _state_Idle(LifecycleArgsFrameEvent __e, LifecycleArgsCompartment compartment) {
        if (__e._message == "load") {
            this._s_Idle_hdl_user_load(__e, compartment);
            return;
        }
    }

    private void _state_Active(LifecycleArgsFrameEvent __e, LifecycleArgsCompartment compartment) {
        if (__e._message == "$>") {
            this._s_Active_hdl_frame_enter(__e, compartment);
            return;
        }
        if (__e._message == "tag") {
            this._s_Active_hdl_user_tag(__e, compartment);
            return;
        }
        if (__e._message == "total") {
            this._s_Active_hdl_user_total(__e, compartment);
            return;
        }
    }

    private void _s_Idle_hdl_user_load(LifecycleArgsFrameEvent __e, LifecycleArgsCompartment compartment) {
        int n = System.Convert.ToInt32(__e._parameters[0]);
        string label = (string) __e._parameters[1];
        { LifecycleArgsCompartment __next = __prepareEnter("Active", new List<object>(), new List<object> { n, label });
        __transition(__next); }
        return;
    }

    private void _s_Active_hdl_frame_enter(LifecycleArgsFrameEvent __e, LifecycleArgsCompartment compartment) {
        int count = System.Convert.ToInt32(compartment.enter_args[0]);
        string name = (string) compartment.enter_args[1];
        self.sum = count + 1;
        self.label = name;
    }

    private void _s_Active_hdl_user_tag(LifecycleArgsFrameEvent __e, LifecycleArgsCompartment compartment) {
        _context_stack[_context_stack.Count - 1]._return = self.label;
                        return
    }

    private void _s_Active_hdl_user_total(LifecycleArgsFrameEvent __e, LifecycleArgsCompartment compartment) {
        _context_stack[_context_stack.Count - 1]._return = self.sum;
                        return
    }
}
