framec/tests/snapshots/csharp_snapshots__linear_fsm.snap
---
source: framec/tests/csharp_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"csharp\")"
---
using System;
using System.Collections.Generic;
using System.Threading.Tasks;

class LinearFsmFrameEvent {
    public string _message;
    public List<object> _parameters;

    public LinearFsmFrameEvent(string message) {
        this._message = message;
        this._parameters = new List<object>();
    }

    public LinearFsmFrameEvent(string message, List<object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class LinearFsmFrameContext {
    public LinearFsmFrameEvent _event;
    public object? _return;
    public Dictionary<string, object> _data;
    public bool _transitioned = false;

    public LinearFsmFrameContext(LinearFsmFrameEvent ev, object? defaultReturn = null) {
        this._event = ev;
        this._return = defaultReturn;
        this._data = new Dictionary<string, object>();
        this._transitioned = false;
    }
}

class LinearFsmCompartment {
    public string state;
    public List<object> state_args;
    public Dictionary<string, object> state_vars;
    public List<object> enter_args;
    public List<object> exit_args;
    public LinearFsmFrameEvent? forward_event;
    public LinearFsmCompartment? parent_compartment;

    public LinearFsmCompartment(string state) {
        this.state = state;
        this.state_args = new List<object>();
        this.state_vars = new Dictionary<string, object>();
        this.enter_args = new List<object>();
        this.exit_args = new List<object>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    public LinearFsmCompartment Copy() {
        LinearFsmCompartment c = new LinearFsmCompartment(this.state);
        c.state_args = new List<object>(this.state_args);
        c.state_vars = new Dictionary<string, object>(this.state_vars);
        c.enter_args = new List<object>(this.enter_args);
        c.exit_args = new List<object>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class LinearFsm {
    private List<LinearFsmCompartment> _state_stack;
    private LinearFsmCompartment __compartment;
    private LinearFsmCompartment? __next_compartment;
    private List<LinearFsmFrameContext> _context_stack;
    public int total = 0;

    public LinearFsm() {
        _state_stack = new List<LinearFsmCompartment>();
        _context_stack = new List<LinearFsmFrameContext>();
        this.__compartment = __prepareEnter("Idle", new List<object>(), new List<object>());
        this.__next_compartment = null;
    }

    public void __frame_init() {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("$>", __compartment.enter_args);
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.Add(__ctx);
        __kernel(__e);
        _context_stack.RemoveAt(_context_stack.Count - 1);
    }

    public static LinearFsm __create() {
        LinearFsm c = new LinearFsm();
        c.__frame_init();
        return c;
    }

    private Dictionary<string, List<string>> hsm_chain() {
        return new Dictionary<string, List<string>> {
            { "Idle", new List<string> { "Idle" } },
            { "Active", new List<string> { "Active" } },
            { "Done", new List<string> { "Done" } },
        };
    }
    private LinearFsmCompartment __prepareEnter(string leaf, List<object> state_args, List<object> enter_args) {
        LinearFsmCompartment? comp = null;
        foreach (string name in hsm_chain()[leaf]) {
            LinearFsmCompartment new_comp = new LinearFsmCompartment(name);
            new_comp.state_args = new List<object>(state_args);
            new_comp.enter_args = new List<object>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    private void __prepareExit(List<object> exit_args) {
        LinearFsmCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = new List<object>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(LinearFsmFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            LinearFsmCompartment next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            LinearFsmFrameEvent exit_event = new LinearFsmFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            LinearFsmFrameEvent? forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                LinearFsmFrameEvent enter_event = new LinearFsmFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                LinearFsmFrameEvent enter_event = new LinearFsmFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            foreach (var ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(LinearFsmFrameEvent __e) {
        if (__compartment.state == "Idle") {
            _state_Idle(__e, __compartment);
        } else if (__compartment.state == "Active") {
            _state_Active(__e, __compartment);
        } else if (__compartment.state == "Done") {
            _state_Done(__e, __compartment);
        }
    }

    private void __transition(LinearFsmCompartment next) {
        __next_compartment = next;
    }

    public void start() {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("start", new List<object>());
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.Add(__ctx);
        try {
            __kernel(_context_stack[_context_stack.Count - 1]._event);
            _context_stack.RemoveAt(_context_stack.Count - 1);
        } catch {
            _context_stack.RemoveAt(_context_stack.Count - 1);
            throw;
        }
    }

    public void progress(int amount) {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("progress", new List<object> { amount });
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.Add(__ctx);
        try {
            __kernel(_context_stack[_context_stack.Count - 1]._event);
            _context_stack.RemoveAt(_context_stack.Count - 1);
        } catch {
            _context_stack.RemoveAt(_context_stack.Count - 1);
            throw;
        }
    }

    public void finish() {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("finish", new List<object>());
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.Add(__ctx);
        try {
            __kernel(_context_stack[_context_stack.Count - 1]._event);
            _context_stack.RemoveAt(_context_stack.Count - 1);
        } catch {
            _context_stack.RemoveAt(_context_stack.Count - 1);
            throw;
        }
    }

    private void _state_Idle(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        if (__e._message == "start") {
            this._s_Idle_hdl_user_start(__e, compartment);
            return;
        }
    }

    private void _state_Active(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        if (__e._message == "finish") {
            this._s_Active_hdl_user_finish(__e, compartment);
            return;
        }
        if (__e._message == "progress") {
            this._s_Active_hdl_user_progress(__e, compartment);
            return;
        }
    }

    private void _state_Done(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {

    }

    private void _s_Idle_hdl_user_start(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        { LinearFsmCompartment __next = __prepareEnter("Active", new List<object>(), new List<object>());
        __transition(__next); }
        return;
    }

    private void _s_Active_hdl_user_finish(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        { LinearFsmCompartment __next = __prepareEnter("Done", new List<object>(), new List<object>());
        __transition(__next); }
        return;
    }

    private void _s_Active_hdl_user_progress(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        int amount = System.Convert.ToInt32(__e._parameters[0]);
        this.total = this.total + amount
    }
}
